# DocuMind

./: .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.yml
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml  pytest.ini
backend/accounts/: admin.py  models.py  serializers.py  tests.py  tests_security.py  views.py
backend/accounts/management/commands/: create_tenant.py  seed_demo_data.py
backend/accounts/migrations/: 0001_initial.py  0002_document_querylog_feedback_documentchunk.py
backend/analytics/: __init__.py  queries.py  test_queries.py
backend/core/: __init__.py  context.py  managers.py  middleware.py  permissions.py
backend/documind/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
docs/: architecture.md  auth_flow.md
docs/ADR/: 0001-initial-architecture.md
eval/: README.md
frontend/src/: App.css  App.tsx
infra/: README.md  main.bicep
