[tool.poetry]
name = "documind-backend"
version = "0.1.0"
description = "DocuMind Django Backend Service"
authors = ["DocuMind Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.0"
djangorestframework = "^3.15.0"
psycopg = {extras = ["binary"], version = "^3.1.18"}
python-dotenv = "^1.0.1"
django-cors-headers = "^4.3.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.4.8"
isort = "^5.13.2"
mypy = "^1.10.0"
django-stubs = "^5.0.0"
djangorestframework-stubs = "^3.15.0"
pre-commit = "^3.7.1"
pytest = "^8.2.0"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
